2010-01-28  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/Csparse.c (Csparse_crossprod): PROTECT() Tsparse_diagU2N()
	result, from a suggestion by Andrew Runnalls.

2010-01-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/SparseM-conv.R (setAs(., "matrix.csc")): fix typo in method.

2010-01-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllGeneric.R: nnzero() is now generic,
	* R/nnzero.R: newly containing all nnzero() methods.

	* R/zzz.R (det): assign base::det such that it uses S4 generic kronecker.

2010-01-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/spModels.R (contr.poly): [the back-compatible-only version]:
	do not use a default for 'scores'; rather rely on stats::contr.poly.

	* tests/spModel.matrix.R: test that case

2009-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/indexing.R: slightly adapt to the very slight [] changes.
	* inst/test-tools.R (Q.C.identical): + checkClass

	* R/Tsparse.R ([-methods): for now go via "Csparse" and drop
	all the sophisticated code dealing with the many cases.

	* R/Csparse.R (subCsp_cols, etc): faster [i,j] via matrix
	multiplication, thanks to suggestions by Greg Jorstad.

	* R/Auxiliaries.R (paste0): more use of paste0()

2009-12-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/diagMatrix.R (.sparseDiagonal): made more general, allowing
	to directly build the equivalent of   Diagonal(n)[, j]

	* man/Diagonal.Rd: document .sparseDiagonal() as well.

2009-12-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllClass.R: abIndex@x and rleDiff@first are now "numLike",
	such that also logical can be converted to "abIndex".

	* R/abIndex.R (.diff): new utility, used in num2abI()

2009-12-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/abIndex.c: include new
	* src/t_Matrix_rle.c (Matrix_RLE_): is template for
	Matrix_rle_i() and Matrix_rle_d(); now obeys a 'force' argument.

	* R/abIndex.R: implement <Arith> methods, at least with scalars.