@@ -1,5 +1,5 @@
 
-R version 2.11.0 Under development (unstable) (2010-01-27 r51053)
+R version 2.10.1 Patched (2010-02-02 r51093)
 Copyright (C) 2010 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -19,6 +19,7 @@ Type 'q()' to quit R.
 > 
 > library(Matrix)
 Loading required package: lattice
+Matrix_NS: <environment: namespace:Matrix>
 > 
 > source(system.file("test-tools.R", package = "Matrix"), keep.source = FALSE)
 > ##-> identical3() etc
@@ -27,7 +28,8 @@ Loading required package: lattice
 +     options(error = recover, warn = 1)
 + } else if(FALSE) { ## MM @ testing
 +     options(error = recover, Matrix.verbose = TRUE, warn = 1)
-+ } else options(Matrix.verbose = TRUE, warn = 1)
++ } else
++ options(Matrix.verbose = TRUE, warn = 1)
 > 
 > 
 > ### Dense Matrices
@@ -727,6 +729,7 @@ diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1)
 > 
 > ## Sub *Assignment* ---- now works (partially):
 > mt0 <- mt
+> nt <- as(mt, "nMatrix")
 > mt[1, 4] <- -99
 > mt[2:3, 1:6] <- 0
 > mt
@@ -1068,9 +1071,13 @@ M[i,j] <- v :  coercing symmetric M[] into non-symmetric
 > assert.EQ.mat(s2, m)# failed in 0.9975-8
 > 
 > 
-> ## m[cbind(i,j)] <- value:
+> ## m[cbind(i,j)] <- value: (2-column matrix subassignment):
 > m.[ cbind(3:5, 1:3) ] <- 1:3
 > stopifnot(m.[3,1] == 1, m.[4,2] == 2)
+> nt. <- nt ; nt[rbind(2:3, 3:4, c(3,3))] <- FALSE
+> s. <- m. ; m.[cbind(3:4,2:3)] <- 0 ## assigning 0 where there *is* 0 ..
+> stopifnot(identical(nt.,nt),       ## should not have changed
++ 	  identical(s., m.))
 > x.x[ cbind(2:6, 2:6)] <- 12:16
 > stopifnot(isValid(x.x, "dsCMatrix"),
 + 	  12:16 == as.mat(x.x)[cbind(2:6, 2:6)])
@@ -1265,7 +1272,7 @@ attr(,"package")
 + 	  identical(thCol,  fx[,5762]))
 > 
 > cat('Time elapsed: ', (.pt <- proc.time()),'\n') # "stats"
-Time elapsed:  45.55 4.052 108.252 0 0 
+Time elapsed:  21.061 0.989 22.186 0 0 
 > ##
 > cat("checkMatrix() of all: \n---------\n")
 checkMatrix() of all: 
@@ -1377,10 +1384,28 @@ mt0
 ne. 
 ne1 
 nsel 
+nt 
+Note: Method with signature "nsparseMatrix#sparseMatrix" chosen for function "==",
+ target signature "ngTMatrix#ngTMatrix".
+ "nMatrix#nMatrix", "sparseMatrix#nsparseMatrix" would also be valid
+Note: Method with signature "nsparseMatrix#sparseMatrix" chosen for function "!=",
+ target signature "ngTMatrix#ngTMatrix".
+ "nMatrix#nMatrix", "sparseMatrix#nsparseMatrix" would also be valid
+Note: Method with signature "nsparseMatrix#sparseMatrix" chosen for function "+",
+ target signature "ngTMatrix#ngTMatrix".
+ "sparseMatrix#nsparseMatrix" would also be valid
+Note: Method with signature "nsparseMatrix#sparseMatrix" chosen for function ">=",
+ target signature "ngTMatrix#ngTMatrix".
+ "nMatrix#nMatrix", "sparseMatrix#nsparseMatrix" would also be valid
+Note: Method with signature "nsparseMatrix#sparseMatrix" chosen for function "<",
+ target signature "ngTMatrix#ngTMatrix".
+ "nMatrix#nMatrix", "sparseMatrix#nsparseMatrix" would also be valid
+nt. 
 s 
 .TM.repl.i.2col(): drop 'matrix' case ...
 diagnosing replTmat(x,i,j,v): nargs()= 3; missing(i,j)= (0,1)
 'sub-optimal sparse 'x[i] <- v' assignment: Coercing class dtTMatrix to dgTMatrix
+s. 
 s.32 
 s2 
 s2.32 
@@ -1407,7 +1432,7 @@ suboptimal 'Arith' implementation of  'dsC*  o  dsC*'
 x.x. 
 suboptimal 'Arith' implementation of  'dsC*  o  dsC*'
 > cat('Time elapsed: ', proc.time() - .pt,'\n') # "stats"
-Time elapsed:  31.574 2.532 73.477 0 0 
+Time elapsed:  13.99 0.336 14.352 0 0 
 > 
 > if(!interactive()) warnings()
 NULL
